--- a/pages/code_of_conduct.html
+++ b/pages/code_of_conduct.html
@@ -2,26 +2,94 @@
 <html>
 <head>
   <title>Jule - Code of Conduct</title>
-  <meta name="description" content="The official code of conduct of the Jule programming language.">
+  <meta name="description" content="The official code of conduct of the Jule community.">
 </head>
 <body>
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <!-- Body Div. -->
 <div id="body-div" style="margin: 10%;">
-  <div id="content-title" class="title" style="padding-top: 40px;"></div>
-  <div id="pledge-title" class="sub-title" style="text-align: left; margin-top: 40px;"></div>
-  <div id="pledge-content" class="text" style="text-align: left; margin-top: 10px;"></div>
-  <div id="standards-title" class="sub-title" style="text-align: left; margin-top: 40px;"></div>
-  <div id="standards-content" class="text" style="text-align: left; margin-top: 10px;"></div>
-  <div id="responsibilities-title" class="sub-title" style="text-align: left; margin-top: 40px;"></div>
-  <div id="responsibilities-content" class="text" style="text-align: left; margin-top: 10px;"></div>
-  <div id="enforcement-title" class="sub-title" style="text-align: left; margin-top: 40px;"></div>
-  <div id="enforcement-content" class="text" style="text-align: left; margin-top: 10px;"></div>
+  <div id="content-title" class="title" style="padding-top: 40px; text-align: left;">Julenour Code of Conduct</div>
+  <div class="text" style="text-align: left; margin-top: 30px;">
+    Online communities allow people from many different backgrounds to come together.
+    The Jule community are committed providing an open, friendly, safe and welcoming environment for all, regardless of age, body size, disability,
+    ethnicity, sex characteristics, gender identity and expression, level of experience, education, of socio-economic status, nationality, personal appearance, race, religion, or sexual identity and orientation or similar.
+    <br><br>
+    The purpose of the code of conduct is to set a respectful, effective and productive standard of behavior for Jule contributors.
+    <br><br>
+    Jule needs all the users and contributors to have a good and big community and for it to be a successful project.
+    Different ideas, views and disagreements are needed for development and progress.
+    However, disrespect is not acceptable.
+    <div class="title-separator"></div>
+    <div class="sub-title" style="text-align: left; margin-bottom: 30px;">Julenour Characteristics</div>
+    Julenours are everyone in the Jule community. Please be like a true Julenour:
+    <ul>
+      <li>Friendly</li>
+      <li>Patient</li>
+        <ul>
+          <li>Note that not everyone uses their native language and may have different communication styles.</li>
+        </ul>
+      <li>Respectful</li>
+      <li>Responsible</li>
+        <ul>
+          <li>Be conscious of your words, actions and take responsible of them.</li>
+        </ul>
+      <li>Constructive</li>
+        <ul>
+          <li>Stay focused, start a different disscussion to talk about something else.</li>
+          <li>Don't just criticize, explain why you're criticizing and what you think.</li>
+          <li>Do not disparage either party, especially when making a comparison. Do not display offensive, humiliating or sarcastic attitudes towards anything.</li>
+        </ul>
+    </ul>
+
+    <div class="title-separator"></div>
+    <div class="sub-title" style="text-align: left; margin-bottom: 30px;">Our Pledge</div>
+    In the interest of fostering an open and welcoming environment,
+    we as contributors and maintainers pledge to making participation in our project and our
+    community a harassment-free experience for everyone, regardless of age, body size, disability,
+    ethnicity, sex characteristics, gender identity and expression, level of experience, education,
+    socio-economic status, nationality, personal appearance, race, religion, or sexual identity and orientation.
+
+    <div class="title-separator"></div>
+    <div class="sub-title" style="text-align: left; margin-bottom: 30px;">Our Standards</div>
+    Examples of behavior that contributes to creating a positive environment include:
+    <ul>
+      <li>Using welcoming and inclusive language</li>
+      <li>Being respectful of differing viewpoints and experiences</li>
+      <li>Gracefully accepting constructive criticism</li>
+      <li>Focusing on what is best for the community</li>
+    </ul>
+    Showing empathy towards other community members Examples of unacceptable behavior by participants include:
+    <ul>
+      <li>The use of sexualized language or imagery and unwelcome sexual attention or advances</li>
+      <li>Trolling, insulting/derogatory comments, and personal or political attacks</li>
+      <li>Public or private harassment</li>
+      <li>Publishing others' private information, such as a physical or electronic address, without explicit permission</li>
+      <li>Other conduct which could reasonably be considered inappropriate in a professional setting</li>
+    </ul>
+
+    <div class="title-separator"></div>
+    <div class="sub-title" style="text-align: left; margin-bottom: 30px;">Our Responsibilities</div>
+    Project maintainers are responsible for clarifying the standards of acceptable behavior and are expected to take
+    appropriate and fair corrective action in response to any instances of unacceptable behavior.
+    <br><br>
+    Project maintainers have the right and responsibility to remove, edit, or reject comments, commits, code, wiki edits,
+    issues, and other contributions that are not aligned to this Code of Conduct, or to ban temporarily or permanently any
+    contributor for other behaviors that they deem inappropriate, threatening, offensive, or harmful.
+
+    <div class="title-separator"></div>
+    <div class="sub-title" style="text-align: left; margin-bottom: 30px;">Enforcement</div>
+    Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the project team at.
+    All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate
+    to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident.
+    Further details of specific enforcement policies may be posted separately.
+    <br><br>
+    Project maintainers who do not follow or enforce the Code of Conduct in good faith may face temporary or permanent
+    repercussions as determined by other members of the project's leadership.
+  </div>
 </div>
 </body>
 <!-- Scripts. -->
-<script src="../javascript/pages/code_of_conduct.js"></script>
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/searchbox.js" type="text/javascript"></script>
 </html>
