--- a/pages/docs.html
+++ b/pages/docs.html
@@ -46,8 +46,9 @@
     <a id="traits" class="topic"><strong>6.</strong> Traits</a> <br>
       <a id="traits-implementing" class="sub-topic"><strong>6.</strong> Implementing</a> <br>
     <a id="memory" class="topic"><strong>7.</strong> Memory</a> <br>
-      <a id="memory-pointers" class="sub-topic"><strong>7.1.</strong> Pointers</a> <br>
-      <a id="memory-memory-management" class="sub-topic"><strong>7.2.</strong> Memory Management</a> <br>
+      <a id="memory-immutability" class="sub-topic"><strong>7.1.</strong> Immutability</a> <br>
+      <a id="memory-pointers" class="sub-topic"><strong>7.2.</strong> Pointers</a> <br>
+      <a id="memory-memory-management" class="sub-topic"><strong>7.3.</strong> Memory Management</a> <br>
     <a id="unsafe-jule" class="topic"><strong>8.</strong> Unsafe Jule</a> <br>
     <a id="error-handling" class="topic"><strong>9.</strong> Error Handling</a> <br>
       <a id="error-handling-error-trait" class="sub-topic"><strong>9.1.</strong> Error Trait</a> <br>
