docs: minor improvements

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -19,9 +19,10 @@
       <a id="getting-started-downloads" class="sub-topic"><strong>1.1.</strong> Downloads</a> <br>
       <a id="getting-started-install-from-source" class="sub-topic"><strong>1.2.</strong> Install from Source</a> <br>
     <a id="compiler" class="topic"><strong>2.</strong> Compiler</a> <br>
-      <a id="compiler-basic-commands" class="sub-topic"><strong>2.1.</strong> Basic Commands</a> <br>
-      <a id="compiler-config-files" class="sub-topic"><strong>2.2.</strong> Config Files</a> <br>
-      <a id="compiler-compiling" class="sub-topic"><strong>2.3.</strong> Compiling</a> <br>
+      <a id="compiler-platform-support" class="sub-topic"><strong>2.1.</strong> Platform Support</a> <br>
+      <a id="compiler-basic-commands" class="sub-topic"><strong>2.2.</strong> Basic Commands</a> <br>
+      <a id="compiler-config-files" class="sub-topic"><strong>2.3.</strong> Config Files</a> <br>
+      <a id="compiler-compiling" class="sub-topic"><strong>2.4.</strong> Compiling</a> <br>
     <a id="project" class="topic"><strong>3.</strong> Project</a> <br>
       <a id="project-directory-order" class="sub-topic"><strong>3.1.</strong> Directory Order</a> <br>
       <a id="project-naming" class="sub-topic"><strong>3.2.</strong> Naming</a> <br>
