update: index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ license that can be found in the LICENSE file.
       The <x style="color: #5F7389">Jule</x> Programming Language
     </div>
     <div style="color: rebeccablue; margin-top: 10px; font-size: 25px;">
-    Jule is the simplified, efficient, statically typed<br> and compiled</x> system programming language
+    Jule is the simple, efficient, statically typed<br> and compiled</x> system programming language
     <div class="marked-ul" style="margin-top: 20px;">
       <li><desc>Jule is an open source and free programming language</desc></li>
       <li><desc>Easy to learn and get started with</desc></li>
