docs: std::os update to latest

--- a/pages/stdlib/os.html
+++ b/pages/stdlib/os.html
@@ -12,6 +12,7 @@
 <!-- Body Div. -->
 <div id="body-div">
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
+    <a id="globals" class="topic"><strong></strong> Globals</a> <br>
     <a id="functions" class="topic"><strong></strong> Functions</a> <br>
   </div>
   <div id="side-navigation-content">
