--- a/pages/stdlib/unicode.html
+++ b/pages/stdlib/unicode.html
@@ -12,7 +12,7 @@
 <!-- Body Div. -->
 <div id="body-div">
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
-    <a id="constants" class="topic"><strong></strong> Constants</a> <br>
+    <a id="globals" class="topic"><strong></strong> Globals</a> <br>
   </div>
   <div id="side-navigation-content">
     <div id="side-navigation-content-body"></div>
