--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ license that can be found in the LICENSE file.
 <!-- Navigation bar. -->
 <div id="navigation" class="navigation"></div>
 <div class="body-div">
-  <div class="neuralcanvas" style="background-color: black;"></div>
+  <div class="neuralcanvas" style="background-color: rgb(233, 233, 233);"></div>
   <div id="startup-panel">
   <div id="startup-panel-content" class="startup-panel-content">
-    <div style="font-size: 40px; font-family: 'OpenSans-Bold'; font-weight: bold;">
+    <div style="color: black; font-size: 40px; font-family: 'OpenSans-Bold'; font-weight: bold;">
       The <x style="color: #5F7389">Jule</x> Programming Language
     </div>
-    <div style="color: rebeccablue; margin-top: 10px; font-size: 25px;">
+    <div style="color: black; margin-top: 10px; font-size: 25px;">
     Jule is the simple, efficient, statically typed<br> and compiled</x> system programming language
     <div class="marked-ul" style="margin-top: 20px;">
       <li><desc>Jule is an open source and free programming language</desc></li>
@@ -85,5 +85,5 @@ license that can be found in the LICENSE file.
 <script src="./javascript/init.js" type="text/javascript"></script>
 <script src="./javascript/pages/index.js" type="text/javascript"></script>
 <script src="./javascript/searchbox.js" type="text/javascript"></script>
-<script src="./javascript/neuralcanvas.js"></script>
+<!-- <script src="./javascript/neuralcanvas.js"></script> -->
 </html>
