docs: update to latest

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -52,9 +52,10 @@
       <a id="memory-memory-management" class="sub-topic"><strong>7.3.</strong> Memory Management</a> <br>
     <a id="unsafe-jule" class="topic"><strong>8.</strong> Unsafe Jule</a> <br>
     <a id="error-handling" class="topic"><strong>9.</strong> Error Handling</a> <br>
-      <a id="error-handling-error-trait" class="sub-topic"><strong>9.1.</strong> Error Trait</a> <br>
-      <a id="error-handling-panics" class="sub-topic"><strong>9.2.</strong> Panics</a> <br>
-      <a id="error-handling-handling-panics" class="sub-topic"><strong>9.3.</strong> Handling Panics</a> <br>
+      <a id="error-handling-error-coding" class="sub-topic"><strong>9.1.</strong> Error Coding</a> <br>
+      <a id="error-handling-error-trait" class="sub-topic"><strong>9.2.</strong> Error Trait</a> <br>
+      <a id="error-handling-panics" class="sub-topic"><strong>9.3.</strong> Panics</a> <br>
+      <a id="error-handling-handling-panics" class="sub-topic"><strong>9.4.</strong> Handling Panics</a> <br>
     <a id="types" class="topic"><strong>10.</strong> Types</a> <br>
       <a id="types-aliasing" class="sub-topic"><strong>10.1.</strong> Aliasing</a> <br>
       <a id="types-casting" class="sub-topic"><strong>10.2.</strong> Casting</a> <br>
