--- a/pages/docs.html
+++ b/pages/docs.html
@@ -35,6 +35,7 @@
       <a id="basics-operators" class="sub-topic"><strong>4.4.</strong> Operators</a> <br>
       <a id="basics-attributes" class="sub-topic"><strong>4.5.</strong> Attributes</a> <br>
       <a id="basics-statements" class="sub-topic"><strong>4.6.</strong> Statements</a> <br>
+      <a id="basics-blocks" class="sub-topic"><strong>4.7.</strong> Blocks</a> <br>
     <a id="common-concepts" class="topic"><strong>5.</strong> Common Concepts</a> <br>
       <a id="common-concepts-variables" class="sub-topic"><strong>5.1.</strong> Variables</a> <br>
       <a id="common-concepts-functions" class="sub-topic"><strong>5.2.</strong> Functions</a> <br>
