--- a/pages/docs.html
+++ b/pages/docs.html
@@ -21,7 +21,7 @@
     <a id="compiler" class="topic"><strong>2.</strong> Compiler</a> <br>
       <a id="compiler-platform-support" class="sub-topic"><strong>2.1.</strong> Platform Support</a> <br>
       <a id="compiler-basic-commands" class="sub-topic"><strong>2.2.</strong> Basic Commands</a> <br>
-      <a id="compiler-config-files" class="sub-topic"><strong>2.3.</strong> Config Files</a> <br>
+      <a id="compiler-compiler-options" class="sub-topic"><strong>2.3.</strong> Compiler Options</a> <br>
       <a id="compiler-compiling" class="sub-topic"><strong>2.4.</strong> Compiling</a> <br>
     <a id="project" class="topic"><strong>3.</strong> Project</a> <br>
       <a id="project-directory-order" class="sub-topic"><strong>3.1.</strong> Directory Order</a> <br>
