doc: update to latest

--- a/pages/stdlib/sys.html
+++ b/pages/stdlib/sys.html
@@ -15,6 +15,7 @@
     <a id="type-aliases" class="topic"><strong></strong> Type Aliases</a> <br>
     <a id="globals" class="topic"><strong></strong> Globals</a> <br>
     <a id="functions" class="topic"><strong></strong> Functions</a> <br>
+    <a id="structs" class="topic"><strong></strong> Structs</a> <br>
   </div>
   <div id="side-navigation-content">
     <div id="side-navigation-content-body"></div>
