--- a/pages/stdlib/fs.html
+++ b/pages/stdlib/fs.html
@@ -12,6 +12,7 @@
 <!-- Body Div. -->
 <div id="body-div">
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
+    <a id="constants" class="topic"><strong></strong> Constants</a> <br>
     <a id="functions" class="topic"><strong></strong> Functions</a> <br>
     <a id="structs" class="topic"><strong></strong> Structs</a> <br>
     <a id="enums" class="topic"><strong></strong> Enums</a> <br>
