--- a/pages/stdlib/os.html
+++ b/pages/stdlib/os.html
@@ -14,6 +14,7 @@
   <div id="side-navigation" style="margin-top: 60px; height: calc(100% - 100px);">
     <a id="globals" class="topic"><strong></strong> Globals</a> <br>
     <a id="functions" class="topic"><strong></strong> Functions</a> <br>
+    <a id="enums" class="topic"><strong></strong> Enums</a> <br>
   </div>
   <div id="side-navigation-content">
     <div id="side-navigation-content-body"></div>
