website: rename documentations as manual

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ license that can be found in the LICENSE file.
     </div>
     </div>
     <div style="margin-top: 50px">
-      <a href="pages/docs.html"><button id="index-learn-button">Learn</button></a>
+      <a href="pages/manual.html"><button id="index-learn-button">Learn</button></a>
       <a href="https://github.com/julelang/jule/releases"><button id="index-download-button">Download</button></a>
     </div>
   </div>
@@ -63,11 +63,11 @@ license that can be found in the LICENSE file.
     Install JuleC
     <div class="arrow right"></div>
   </div></a>
-  <a href="./pages/docs.html" class="link-card">
+  <a href="./pages/manual.html" class="link-card">
   <img class="getstarted-linkcard-image" src="./resources/cap.png">
   <div class="link-card-body">
-    <div class="sub-sub-title">Documentations</div>
-    Learn the language
+    <div class="sub-sub-title">Manual</div>
+    Learn Jule
     <div class="arrow right"></div>
   </div></a>
   <a href="./pages/community.html" class="link-card">
