--- a/pages/manual.html
+++ b/pages/manual.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="The official documentations of the Jule programming language.
-  This documentations updates with JuleC.">
+  <meta name="description" content="The official manual of the Jule programming language.
+  This manual updates with JuleC.">
   <link href="../styles/pages/docs.css" rel="stylesheet" type="text/css">
+  <title>Jule - Manual</title>
 </head>
 <body>
 <!-- Navigation bar. -->
@@ -94,5 +95,5 @@
 <script src="../javascript/init.js" type="text/javascript"></script>
 <script src="../javascript/searchbox.js" type="text/javascript"></script>
 <script src="../javascript/sidenav_page.js" type="text/javascript"></script>
-<script src="../javascript/pages/docs.js" type="text/javascript"></script>
+<script src="../javascript/pages/manual.js" type="text/javascript"></script>
 </html>
