Add link to CoC and security policy

--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -25,9 +25,12 @@
     <strong><ins>This guide is about contributing to JuleC.</ins></strong>
     <br><br>
     All contributions to Jule, no matter how small or large, are welcome. <br>
-    From a simple typo correction to a contribution to the code, all contributions are welcome and appreciated. <br>
-    Before you start contributing, you should familiarize yourself with the following repository structure;
+    From a simple typo correction to a contribution to the code, all contributions are welcome and appreciated.<br>
+    Before you start contributing, you should familiarize yourself with the following repository structure;<br>
+    
+    <b>Read our <a href=https://github.com/julelang/jule/blob/master/CODE_OF_CONDUCT.md>Code of Conduct</a> and <a href=https://github.com/julelang/jule/security/policy>Security Policy</a> before doing anything.</b>
     <br><br>
+
     <li><a href="https://github.com/julelang/jule/blob/master/api"><x class="inline_code">api/</x></a></li>
     C++ API of JuleC.
     <li><a href="https://github.com/julelang/jule/blob/master/docs"><x class="inline_code">docs/</x></a></li>
