make warning code of conduct and security policy text of contributing

--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -27,9 +27,10 @@
     All contributions to Jule, no matter how small or large, are welcome. <br>
     From a simple typo correction to a contribution to the code, all contributions are welcome and appreciated.<br>
     Before you start contributing, you should familiarize yourself with the following repository structure;<br>
-    
-    <b>Read our <a href=https://github.com/julelang/jule/blob/master/CODE_OF_CONDUCT.md>Code of Conduct</a> and <a href=https://github.com/julelang/jule/security/policy>Security Policy</a> before doing anything.</b>
-    <br><br>
+
+    <div class="warn">
+    <b>Read our <a href="./code_of_conduct.html">Code of Conduct</a> and <a href=https://github.com/julelang/jule/security/policy>Security Policy</a> before doing anything.</b>
+    </div>
 
     <li><a href="https://github.com/julelang/jule/blob/master/api"><x class="inline_code">api/</x></a></li>
     C++ API of JuleC.
