docs: minor improvements

--- a/pages/manual.html
+++ b/pages/manual.html
@@ -28,7 +28,7 @@
       <a id="project-directory-order" class="sub-topic"><strong>3.1.</strong> Directory Order</a> <br>
       <a id="project-naming" class="sub-topic"><strong>3.2.</strong> Naming</a> <br>
       <a id="project-declarations" class="sub-topic"><strong>3.3.</strong> Declarations</a> <br>
-      <a id="project-defines" class="sub-topic"><strong>3.4.</strong> Defines</a> <br>
+      <a id="project-cycles" class="sub-topic"><strong>3.4.</strong> Cycles</a> <br>
     <a id="basics" class="topic"><strong>4.</strong> Basics</a> <br>
       <a id="basics-comments" class="sub-topic"><strong>4.1.</strong> Comments</a> <br>
       <a id="basics-reserved-functions" class="sub-topic"><strong>4.2.</strong> Reserved Functions</a> <br>
