--- a/pages/community.html
+++ b/pages/community.html
@@ -24,6 +24,18 @@
       <div class="sub-sub-title">GitHub</div>
     </div></a>
 
+    <a href="https://discord.gg/CZhK7dyh9X" class="link-card">
+      <img
+        class="getstarted-linkcard-image"
+        src="../resources/discord.png"
+        width="100"
+        height="100"
+        style="margin-top: 20px;">
+      <br>
+      <div class="link-card-body" style="display: inline-flex; margin-top: 100px;">
+        <div class="sub-sub-title">Discord Community</div>
+      </div></a>
+
     <a href="https://stackoverflow.com/questions/tagged/jule+julec" class="link-card">
     <img
       class="getstarted-linkcard-image"
