--- a/pages/manual.html
+++ b/pages/manual.html
@@ -84,7 +84,10 @@
     <a id="cpp" class="topic"><strong>12.</strong> Cpp</a> <br>
     <a id="cpp-api" class="sub-topic"><strong>12.1.</strong> API</a> <br>
       <a id="cpp-interoperability" class="sub-topic"><strong>12.2.</strong> Interoperability</a> <br>
-    <a id="use-declarations" class="topic"><strong>13.</strong> Use Declarations</a> <br>
+    <a id="packages" class="topic"><strong>13.</strong> Packages</a> <br>
+      <a id="packages-using-packages" class="sub-topic"><strong>13.1.</strong> Using Packages</a> <br>
+      <a id="packages-exporting-definitions" class="sub-topic"><strong>13.2.</strong> Exporting Definitions</a> <br>
+      <a id="packages-3rd-party-packages" class="sub-topic"><strong>13.3.</strong> 3rd Party Packages</a> <br>
     <a id="stdlib" class="topic"><strong>14.</strong> Standard Library</a> <br>
     <a id="end" class="topic">End</a>
   </div>
