--- a/pages/contributing.html
+++ b/pages/contributing.html
@@ -38,38 +38,42 @@
     Documentations. <br>
     They are the documentation of JuleC (the Jule programming language, naturally).<br>
     Since this section is completely devoted to the website, please do what you need to add by contributing to the <a href="https://github.com/julelang/website" target="__blank">website</a>.
-    <li><a href="https://github.com/julelang/jule/blob/master/src"><x class="inline_code">src/</x></a></li>
+    <li><a href="https://github.com/julelang/jule/blob/master/src/julec"><x class="inline_code">src/julec/</x></a></li>
     Source codes of JuleC.
-    <ul>
-      <li><a href="https://github.com/julelang/jule/blob/master/src/ast"><x class="inline_code">ast/</x></a></li>
-      The AST objects and tree.
-      <li><a href="https://github.com/julelang/jule/blob/master/src/build"><x class="inline_code">build/</x></a></li>
-      Constants, functions or etc. for build steps and platforms.
-      <li><a href="https://github.com/julelang/jule/blob/master/src/cmd"><x class="inline_code">cmd/</x></a></li>
-      Main source files. <br>
-      The main source files of JuleC and other programs, if any, are located here.
-      <li><a href="https://github.com/julelang/jule/blob/master/src/constants"><x class="inline_code">constants/</x></a></li>
-      Functionalities for constant eval.
-      <ul>
-        <li><a href="https://github.com/julelang/jule/blob/master/src/lit"><x class="inline_code">lit/</x></a></li>
-        Functionalities for literal eval.
-      </ul>
-      <li><a href="https://github.com/julelang/jule/blob/master/src/lex"><x class="inline_code">lex/</x></a></li>
-      Lexer (lexical analysis). <br>
-      Segments Jule source code into tokens.
-      <li><a href="https://github.com/julelang/jule/blob/master/src/parser"><x class="inline_code">parser/</x></a></li>
-      Parser. <br>
-      Makes syntax analysis, builds AST.
-      <li><a href="https://github.com/julelang/jule/blob/master/src/sema"><x class="inline_code">sema/</x></a></li>
-      Semantic analysis. <br>
-      Makes type checking, object binding. <br>
-      Builds symbol table and IR tree.
-      <li><a href="https://github.com/julelang/jule/blob/master/src/types"><x class="inline_code">types/</x></a></li>
-      Functionalities for static type system. <br>
-      Limit constants and type compatibility or etc.
-    </ul>
     <li><a href="https://github.com/julelang/jule/blob/master/std"><x class="inline_code">std/</x></a></li>
     Standard library.
+    <ul>
+      <li><a href="https://github.com/julelang/jule/blob/master/std/jule"><x class="inline_code">jule/</x></a></li>
+      Compiler packages.
+      <ul>
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/ast"><x class="inline_code">ast/</x></a></li>
+        The AST objects and tree.
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/build"><x class="inline_code">build/</x></a></li>
+        Constants, functions or etc. for build steps and platforms.
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/cmd"><x class="inline_code">cmd/</x></a></li>
+        Main source files. <br>
+        The main source files of JuleC and other programs, if any, are located here.
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/constant"><x class="inline_code">constant/</x></a></li>
+        Functionalities for constant eval.
+        <ul>
+          <li><a href="https://github.com/julelang/jule/blob/master/std/jule/constant/lit"><x class="inline_code">lit/</x></a></li>
+          Functionalities for literal eval.
+        </ul>
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/lex"><x class="inline_code">lex/</x></a></li>
+        Lexer (lexical analysis). <br>
+        Segments Jule source code into tokens.
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/parser"><x class="inline_code">parser/</x></a></li>
+        Parser. <br>
+        Makes syntax analysis, builds AST.
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/sema"><x class="inline_code">sema/</x></a></li>
+        Semantic analysis. <br>
+        Makes type checking, object binding. <br>
+        Builds symbol table and IR tree.
+        <li><a href="https://github.com/julelang/jule/blob/master/std/jule/types"><x class="inline_code">types/</x></a></li>
+        Functionalities for static type system. <br>
+        Limit constants and type compatibility or etc.
+      </ul>
+    </ul>
     <li><a href="https://github.com/julelang/jule/blob/master/tests"><x class="inline_code">tests/</x></a></li>
     Jule source codes for testing JuleC.
   </div>
