--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg">
   <title>The Jule Programming Language</title>
+  <meta name="description" content="The official website of the Jule Programming Language.">
+  <meta name="keywords" content="jule, julec, julelang, jule lang, programming language, jule programming language">
+  <meta property="og:title" content="The Jule Programming Language">
+  <meta property="og:description" content="The official website of the Jule Programming Language.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg" />
 </head>
 
 <body>
