--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   <link rel="icon" href="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg">
   <title>The Jule Programming Language</title>
   <meta name="description" content="The official website of the Jule Programming Language.">
+  <meta name="language" content="en-US">
+  <meta name="author" content="Jule Team">
+  <meta name="url" content="https://jule.dev">
+  <meta name="identifier-URL" content="https://jule.dev">
   <meta name="keywords" content="jule, julec, julelang, jule lang, programming language, jule programming language">
   <meta property="og:title" content="The Jule Programming Language">
   <meta property="og:description" content="The official website of the Jule Programming Language.">
   <meta property="og:image" content="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg" />
+  <meta property="og:url" content="https://jule.dev">
+  <meta property="og:site_name" content="The Jule Programming Language">
+  <meta property="og:type" content="website">
 </head>
 
 <body>
