--- a/index.html
+++ b/index.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg">
-  <title>The Jule Programming Language</title>
-  <meta name="description" content="The official website of the Jule Programming Language.">
-  <meta name="language" content="en-US">
-  <meta name="author" content="Jule Team">
-  <meta name="url" content="https://jule.dev">
-  <meta name="identifier-URL" content="https://jule.dev">
-  <meta name="keywords" content="jule, julec, julelang, jule lang, programming language, jule programming language">
-  <meta property="og:title" content="The Jule Programming Language">
-  <meta property="og:description" content="The official website of the Jule Programming Language.">
-  <meta property="og:image" content="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg" />
-  <meta property="og:url" content="https://jule.dev">
-  <meta property="og:site_name" content="The Jule Programming Language">
-  <meta property="og:type" content="website">
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+<html class="scroll-smooth" lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Jule Programming Language</title>
+  </head>
+  <body class="dark:bg-zinc-900 dark:text-white">
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
