--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="website">
   </head>
 
-  <body class="dark:bg-zinc-900 dark:text-white">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
