add syntax highlighting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <title>The Jule Programming Language</title>
     <meta name="description" content="The official website of the Jule Programming Language.">
     <meta name="image" content="https://raw.githubusercontent.com/julelang/resources/master/jule_icon.svg">
