--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="scroll-smooth" lang="en">
+<html class="scroll-smooth h-full" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +26,8 @@
     <meta property="og:type" content="website">
   </head>
 
-  <body>
-    <div id="app"></div>
+  <body class="h-full">
+    <div id="app" class="min-h-screen flex flex-col"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
